[package]
name = "substack-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rss = "2.0"
html2md = "0.2.13"
chrono = "0.4"
promptly = "0.3.1"